# get_next_line

./: 123.c  20.09.c  321.c  54.c  666.c  999999.c  Andrey_pomog  CMakeLists.txt  a.out  asdasdasdasd.c  b  bez_ml.c  c  get_next_line.c  get_next_line.h  get_next_line.h.gch  gnl.c  gopa  large_file.txt  main.c  test  test2  test3  test5
a.out.dSYM/Contents/Resources/DWARF/: a.out
